--- a/views/report_is_gabarit_controle.xml
+++ b/views/report_is_gabarit_controle.xml
@@ -60,32 +60,12 @@
                                 <td class="text-left" width="20%"><b>Périodicité</b></td>
                                 <td class="text-left" width="30%"><span t-field="o.periodicite"/></td>
                             </tr>
-                            <!--
                             <tr>
                                 <td class="text-left" width="20%"><b>Type de contrôle</b></td>
                                 <td class="text-left" width="30%"><span t-field="o.type_controle.name"/></td>
-                                <td class="text-left" width="20%"><b>Contrôle</b></td>
-                                <td class="text-left" width="30%"><span t-field="o.controle"/></td>
+                                <td class="text-left" width="20%"><b>Date prochain contrôle</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.date_prochain_controle"/></td>
                             </tr>
-                            <tr>
-                                <td class="text-left" width="20%"><b>Cause arrêt</b></td>
-                                <td class="text-left" width="30%"><span t-field="o.cause_arret"/></td>
-                                <td class="text-left" width="20%"><b>Date du contrôle</b></td>
-                                <td class="text-left" width="30%"><span t-field="o.date_controle"/></td>
-                            </tr>
-                            <tr>
-                                <td class="text-left" width="20%"><b>Organisme contrôleur</b></td>
-                                <td class="text-left" width="30%"><span t-field="o.organisme_controleur"/></td>
-                                <td class="text-left" width="20%"><b>Fournisseur</b></td>
-                                <td class="text-left" width="30%"><span t-field="o.fournisseur_id.name"/></td>
-                            </tr>
-                            <tr>
-                                <td class="text-left" width="20%"><b>Code</b></td>
-                                <td class="text-left" width="30%"><span t-field="o.etat_conformite"/></td>
-                                <td class="text-left" width="20%"><b>Etat de la conformité</b></td>
-                                <td class="text-left" width="30%"><span t-field="o.etat_conformite"/></td>
-                            </tr>
-                            -->
                         </table>
                         <br/>
                         <table class="table table-condensed" width="100%">
@@ -96,8 +76,10 @@
                                     <th width="23%"><strong>Opération</strong></th>
                                     <th width="23%"><strong>Cause arrêt</strong></th>
                                     <th width="7%"><strong>Organisme contrôleur</strong></th>
-                                    <th width="5%"><strong>Résultat</strong></th>
+                                    <th width="5%"><strong>Etat de la conformité</strong></th>
+                                    <th width="5%"><strong>Pièces jointes</strong></th>
                                     <th width="5%"><strong>Commentaire</strong></th>
+
                                 </tr>
                             </thead>
                             <tbody>
@@ -108,6 +90,11 @@
                                     <td><span t-field="l.cause_arret"/> </td>
                                     <td><span t-field="l.organisme_controleur"/></td>
                                     <td><span t-field="l.etat_conformite"/> </td>
+                                    <td>
+                                        <t t-foreach="l.rapport_controle_ids" t-as="pj">
+                                            <div t-field="pj.name"/>
+                                        </t>
+                                    </td>
                                     <td></td>
                                 </tr>
                             </tbody>
