--- a/views/report_liste_servir.xml
+++ b/views/report_liste_servir.xml
@@ -107,7 +107,7 @@
                     <div class="col-xs-4">
                         <div class="client">
                             Emplacement source : <b><span t-field="o.is_source_location_id.name"/></b><br />
-                            Poids brut : <b><span t-field="o.poids_brut"/> Kg</b><br />
+                            Poids brut : <b><t t-esc='"{:,.1f}".format(o.poids_brut).replace(","," ").replace(".",",")'/> Kg</b><br />
                             Transporteur : <br />
                             <b><span t-field="o.transporteur_id.name"/></b> (<span t-field="o.transporteur_id.is_code"/>)<br />
                             Téléphone : <span t-field="o.transporteur_id.phone" /><br />
@@ -288,7 +288,7 @@
                                                 <td class="text-right nowrap">  <t t-esc='"{:,.1f}".format(l.nb_um).replace(","," ").replace(".",",")'/>  </td>
 
 
-                                                <t t-set="poids" t-value="l.quantite*l.product_id.product_tmpl_id.weight"/>
+                                                <t t-set="poids" t-value="l.quantite*l.product_id.product_tmpl_id.weight_net"/>
                                                 <t t-set="poids_total" t-value="poids_total + poids"/>
 
                                                 <td class="text-right nowrap">  
@@ -311,7 +311,7 @@
 
             <div class="row">
                 <div class="col-xs-8">
-                    Poids Total : <b><t t-esc='"{:,.0f}".format(poids_total).replace(","," ").replace(".",",")'/> Kg</b>
+                    Poids net Total : <b><t t-esc='"{:,.0f}".format(poids_total).replace(","," ").replace(".",",")'/> Kg</b>
                 </div>
             </div><br />
 
