--- a/views/report_paperformat.xml
+++ b/views/report_paperformat.xml
@@ -348,7 +348,7 @@
             <field name="format">A4</field>
             <field name="page_height">0</field>
             <field name="page_width">0</field>
-            <field name="orientation">Portrait</field>
+            <field name="orientation">Landscape</field>
             <field name="margin_top">7</field>
             <field name="margin_bottom">15</field>
             <field name="margin_left">7</field>
@@ -359,6 +359,21 @@
         </record>
 
 
+        <record id="inventaire_ecart_paperformat" model="report.paperformat">
+            <field name="name">Feuilles écarts d'inventaire</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">40</field>
+            <field name="margin_bottom">15</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">30</field>
+            <field name="dpi">90</field>
+        </record>
 
     </data>
 </openerp>
