--- a/views/report_appel_de_livraison.xml
+++ b/views/report_appel_de_livraison.xml
@@ -139,10 +139,8 @@
                     <div class="col-xs-4">
                         <t t-if="o.message">
                             <p>
-                                Message :
-                                <t t-foreach="o.partner_id.get_messages(o.partner_id.id)" t-as="m">
-                                    <b><div t-raw="m"/></b>
-                                </t>
+                                Message :<br />
+                                <b><span t-field="o.message"/></b>
                             </p>
                         </t>
                     </div>
