--- a/views/report_paperformat.xml
+++ b/views/report_paperformat.xml
@@ -17,7 +17,7 @@
             <field name="dpi">90</field>
         </record>
 
-        <record id="ar_commandes_paperformat" model="report.paperformat">
+        <record id="devis_commandes_paperformat" model="report.paperformat">
             <field name="name">A4 - AR de commande</field>
             <field name="default" eval="True" />
             <field name="format">A4</field>
@@ -30,6 +30,22 @@
             <field name="margin_right">7</field>
             <field name="header_line" eval="False" />
             <field name="header_spacing">60</field>
+            <field name="dpi">90</field>
+        </record>
+
+        <record id="ar_commandes_paperformat" model="report.paperformat">
+            <field name="name">A4 - AR de commande</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">70</field>
+            <field name="margin_bottom">25</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">70</field>
             <field name="dpi">90</field>
         </record>
 
